# pipfp-rs

./: .gitignore  Cargo.toml  index.html
docs/: index.md
search/: search_index.json
src/: hist.rs  main.rs
